# codex-workspace-launcher

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  VERSIONS.env  ruff.toml
.github/matchers/: pyright.json  shellcheck.json
.github/workflows/: ci.yml  publish.yml  release-brew.yml  release-docker.yml
completions/: _agent-workspace-launcher  agent-workspace-launcher.bash
crates/agent-workspace/: Cargo.toml
crates/agent-workspace/src/: cli.rs  launcher.rs  lib.rs  main.rs  runtime.rs
crates/agent-workspace/src/completion/: candidates.rs  engine.rs  mod.rs  output.rs  protocol.rs
crates/agent-workspace/src/completion/fixtures/: matrix_cases.tsv
crates/agent-workspace/src/completion/providers/: workspaces.rs
crates/agent-workspace/src/launcher/: auth.rs  container.rs  create.rs  exec.rs  ls.rs  reset.rs  rm.rs  tunnel.rs
docs/: BUILD.md  DESIGN.md  DOCKERHUB_REPOSITORY_OVERVIEW.md  INTEGRATION_TEST.md  RELEASE_GUIDE.md
docs/guides/: 01-install.md  02-quickstart.md  03-create.md  04-exec.md  05-rm.md  06-reset.md  07-tunnel.md  08-auth.md  09-dood-rules.md  10-troubleshooting.md  11-reference.md  12-agent-workspace.md  README.md
docs/plans/: aw-aws-migration-inventory.md  aw-aws-rust-agent-workspace-migration-plan.md  (+3 more)
scripts/: awl.bash  awl.zsh  awl_docker.bash  awl_docker.zsh  aws.bash  aws.zsh  bump_versions.sh  cws  cws.bash  cws.zsh  generate_codex_workspace_bundle.sh  release_audit.sh  release_prepare_changelog.sh
tests/: conftest.py  test_completion_adapters.py  test_wrapper_equivalence.py
(+63 files in other folders)
